# MultiAgent-Debate

./: .gitignore  README.md  pyproject.toml
config/: agents.yaml  constraints.yaml  vocabulary.yaml
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.jsx  index.css
dashboard/src/components/: AgentConstellation.jsx  ConstraintDashboard.jsx  DebateArena.jsx  DebateSidebar.jsx  DetailInspector.jsx  EventLog.jsx  LedgerExplorer.jsx  PipelineTimeline.jsx  ProposalInput.jsx  StatsBar.jsx  VerificationGate.jsx
dashboard/src/hooks/: usePipeline.js  useWebSocket.js
dashboard/src/utils/: constants.js
examples/: run_demo.py
src/mad/: __init__.py  cli.py  events.py  graph.py  server.py  state.py
src/mad/agents/: __init__.py  base.py  loader.py  prompts.py  tools.py
src/mad/agents/builtins/: __init__.py  enterprise.py  product_manager.py  qa_engineer.py  security_auditor.py  tech_lead.py
src/mad/constraints/: __init__.py  evaluator.py  registry.py
src/mad/ledger/: __init__.py  base.py  integrity.py  json_file.py  memory.py
src/mad/llm/: __init__.py  provider.py
src/mad/pipeline/: __init__.py  gate.py  orchestrator.py
src/mad/schemas/: __init__.py  enterprise.py  evidence.py  vocabulary.py
tests/: __init__.py  test_agents.py  test_constraints.py  test_integration.py  test_ledger.py  test_pipeline.py  test_schemas.py
