[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-debate"
version = "0.1.0"
description = "Decentralized Multi-Agent System with Verified Common-Ground Layer"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Divyansh Sharma"},
]

dependencies = [
    "pydantic>=2.0,<3.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=13.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
llm = [
    "litellm>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
mad = "mad.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
